force-app/main/default/objects/Forecast__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Forecasts</relationshipLabel>
    <relationshipName>City</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>