force-app/main/default/objects/Forecast__c/fields/Weather_Message__c.field-meta.xml
<CustomField>
    <fullName>Weather_Message__c</fullName>
    <label>Weather Message</label>
    <type>TextArea</type>
</CustomField>